--- a/.github/workflows/ios_builds.yml
+++ b/.github/workflows/ios_builds.yml
@@ -6,7 +6,11 @@ on:
 env:
   # Used for the cache key. Add version suffix to force clean build.
   GODOT_BASE_BRANCH: master
-  SCONSFLAGS: verbose=yes warnings=extra werror=yes debug_symbols=no module_text_server_fb_enabled=yes strict_checks=yes
+  SCONSFLAGS: >-
+    dev_mode=yes
+    module_text_server_fb_enabled=yes
+    tests=no
+    debug_symbols=no
 
 jobs:
   ios-template:
@@ -33,7 +37,6 @@ jobs:
           sconsflags: ${{ env.SCONSFLAGS }}
           platform: ios
           target: template_release
-          tests: false
           scons-cache-limit: 1
 
       - name: Save Godot build cache
