Style: Standardize Obj-C `#import` syntax

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -154,7 +154,13 @@ repos:
         language: python
         entry: python misc/scripts/header_guards.py
         files: \.(h|hpp|hh|hxx)$
-        exclude: ^.*/(dummy|thread|platform_config|platform_gl)\.h$
+        exclude: |
+          (?x)^(
+            core/os/thread\.h|
+            drivers/(apple/coreaudio|coremidi|metal)/.*|
+            misc/dist/ios_xcode/.*|
+            platform/(ios|macos)/(?!platform_(config|gl))[^/]*\.h
+          )$
 
       - id: file-format
         name: file-format
